cmake_minimum_required(VERSION 3.9.2)

if("$ENV{TRAVIS_BUILD_NUMBER}" STREQUAL "")
    set(PRINT_IP_NUMBER "0")
else()
    set(PRINT_IP_NUMBER "$ENV{TRAVIS_BUILD_NUMBER}")
endif()

project(print_ip VERSION 0.0.${PRINT_IP_NUMBER})

set(CMAKE_CXX_STANDARD 14)

add_executable(print_ip dotdotdot.cpp)

set(CPACK_GENERATOR DEB)

set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

set(CPACK_PACKAGE_CONTACT dikama2013@yandex.ru)

include(CPack)
